changed basic information

--- a/src/content/2018-05-01-about.md
+++ b/src/content/2018-05-01-about.md
@@ -10,7 +10,7 @@ tags:
   - 閱讀
 ---
 
-## 關於 Calpa
+## Miguel
 
 你好，我是 Calpa，一個喜歡寫技術文章的前端程序員。這個技術博客是從我大三一直開始繼續到現在。對於我而言，我會對於新的技術感到興奮，比如說我會關注 Github Explore，Hacker News 等技術網站。我也希望將這些新的技術帶到團隊裡面，可以讓其他人也感受到技術的樂趣。
 
