--- a/src/content/2018-05-01-about.md
+++ b/src/content/2018-05-01-about.md
@@ -1,10 +1,10 @@
 ---
 templateKey: blog-post
 id: c192eaba9fefc632acf87ed636593475
-title: 關於作者
-slug: /2018/05/01/about-calpa-liu/
+title: About me I guess
+slug: /about-miguel/
 date: 2018-05-01T03:48:03.125Z
-description: 你好，歡迎來到我的博客。我是 Calpa，一個喜歡寫技術文章的前端程序員。
+description: Just a boi tryna make a blog
 headerImage: https://i.imgur.com/mich3dS.jpg
 tags:
   - 閱讀
@@ -12,7 +12,7 @@ tags:
 
 ## Miguel
 
-你好，我是 Calpa，一個喜歡寫技術文章的前端程序員。這個技術博客是從我大三一直開始繼續到現在。對於我而言，我會對於新的技術感到興奮，比如說我會關注 Github Explore，Hacker News 等技術網站。我也希望將這些新的技術帶到團隊裡面，可以讓其他人也感受到技術的樂趣。
+WHY DID YOU GO HERE
 
 ![gatsby-starter-calpa-blog](https://i.imgur.com/o6lWvTb.jpg)
 
