--- a/src/content/2019-03-15-日本のトイレ.md
+++ b/src/content/2019-03-15-日本のトイレ.md
@@ -10,11 +10,11 @@ headerImage: 'https://www.japan-guide.com/g9/2003_01.jpg'
 templateKey: blog-post
 ---
 
-こんにちはみんなさんミゲルです！！私のウエブサイトへようこそ。トイレについて説明してみます。僕にとって、日本のトイレはすごく面白くて便利です！ このかっこいトイレはとても人気がある。機能についてたくさんがある。ビデとかドライヤーとか
-<!-- こんにちはみんなさんミゲルです！！わたしのウエブサイトへようこそ。トイレについて<ruby>説明<rp>(</rp><rt>せつめい</rt><rp>)</rp></ruby>してみます。<ruby>僕<rp>(</rp><rt>ぼく</rt><rp>)</rp></ruby>にとって、<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby>のトイレはすごく<ruby>面白<rp>(</rp><rt>おもしろ</rt><rp>)</rp></ruby>くて<ruby>便利<rp>(</rp><rt>べんり</rt><rp>)</rp></ruby>です！ このかっこいトイレはとても<ruby>人気<rp>(</rp><rt>にんき</rt><rp>)</rp></ruby>がある。<ruby>機能<rp>(</rp><rt>きのう</rt><rp>)</rp></ruby>についてたくさんがある。ビデとかドライヤーとか。 -->
+<!-- こんにちはみんなさんミゲルです！！私のウエブサイトへようこそ。トイレについて説明してみます。僕にとって、日本のトイレはすごく面白くて便利です！ このかっこいトイレはとても人気がある。機能についてたくさんがある。ビデとかドライヤーとか全部面白い -->
+こんにちはみんなさんミゲルです！！<ruby>私<rp>(</rp><rt>わたし</rt><rp>)</rp></ruby>のウエブサイトへようこそ。トイレについて<ruby>説明<rp>(</rp><rt>せつめい</rt><rp>)</rp></ruby>してみます。<ruby>僕<rp>(</rp><rt>ぼく</rt><rp>)</rp></ruby>にとって、<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby>のトイレはすごく<ruby>面白<rp>(</rp><rt>おもしろ</rt><rp>)</rp></ruby>くて<ruby>便利<rp>(</rp><rt>べんり</rt><rp>)</rp></ruby>です！ このかっこいトイレはとても<ruby>人気<rp>(</rp><rt>にんき</rt><rp>)</rp></ruby>がある。<ruby>機能<rp>(</rp><rt>きのう</rt><rp>)</rp></ruby>についてたくさんがある。ビデとかドライヤーとか<ruby>全部<rp>(</rp><rt>ぜんぶ</rt><rp>)</rp></ruby><ruby>面白<rp>(</rp><rt>おもしろ</rt><rp>)</rp></ruby>い
 
 ## なぜ私はトイレを選んだのか。
-
+  私はいつも
 
 ## ハイテクトイレ
 <iframe
