--- a/src/content/2019-03-15-日本のトイレ.md
+++ b/src/content/2019-03-15-日本のトイレ.md
@@ -14,7 +14,7 @@ templateKey: blog-post
 こんにちはみんなさんミゲルです！！<ruby>私<rp>(</rp><rt>わたし</rt><rp>)</rp></ruby>のウエブサイトへようこそ。トイレについて<ruby>説明<rp>(</rp><rt>せつめい</rt><rp>)</rp></ruby>してみます。<ruby>僕<rp>(</rp><rt>ぼく</rt><rp>)</rp></ruby>にとって、<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby>のトイレはすごく<ruby>面白<rp>(</rp><rt>おもしろ</rt><rp>)</rp></ruby>くて<ruby>便利<rp>(</rp><rt>べんり</rt><rp>)</rp></ruby>です！ このかっこいトイレはとても<ruby>人気<rp>(</rp><rt>にんき</rt><rp>)</rp></ruby>がある。<ruby>機能<rp>(</rp><rt>きのう</rt><rp>)</rp></ruby>についてたくさんがある。ビデとかドライヤーとか<ruby>全部<rp>(</rp><rt>ぜんぶ</rt><rp>)</rp></ruby><ruby>面白<rp>(</rp><rt>おもしろ</rt><rp>)</rp></ruby>い
 
 ## なぜ私はトイレを選んだのか。
-  私はいつも
+  <ruby>私<rp>(</rp><rt>わたし</rt><rp>)</rp></ruby>はいつもトイレを<ruby>好<rp>(</rp><rt>す</rt><rp>)</rp></ruby>きです
 
 ## ハイテクトイレ
 <iframe
@@ -28,51 +28,55 @@ templateKey: blog-post
   mozallowfullscreen="true"
   allowFullScreen
 ></iframe>
-素晴らしい。。
+<ruby>素晴<rp>(</rp><rt>すば</rt><rp>)</rp></ruby>らしい
 
-# 歴史
-  昔のトイレは木で出来ている。 明治維新のあと様式の作るはじめまりました。
-TOTO株式会社（かぶしきがいしゃ）は世界で一番トイレの作る会社です。この写真はTOTOミュジアムにとりました。
+# <ruby>歴史<rp>(</rp><rt>れきし</rt><rp>)</rp></ruby>
+  <!-- 昔のトイレは木で出来ている。 明治維新のあと様式の作るはじめまりました。 -->
+<!-- TOTO株式会社（かぶしきがいしゃ）は世界で一番トイレの作る会社です。この写真はTOTOミュジアムにとりました。 -->
+<ruby>昔<rp>(</rp><rt>むかし</rt><rp>)</rp></ruby>のトイレは<ruby>木<rp>(</rp><rt>き</rt><rp>)</rp></ruby>で<ruby>出来<rp>(</rp><rt>でき</rt><rp>)</rp></ruby>ている。 <ruby>明治維新<rp>(</rp><rt>めいじいしん</rt><rp>)</rp></ruby>のあと<ruby>様式<rp>(</rp><rt>ようしき</rt><rp>)</rp></ruby>の<ruby>作<rp>(</rp><rt>つく</rt><rp>)</rp></ruby>るはじめまりました。
+TOTO<ruby>株式会社<rp>(</rp><rt>かぶしきがいしゃ</rt><rp>)</rp></ruby>（かぶしきがいしゃ）は<ruby>世界<rp>(</rp><rt>せかい</rt><rp>)</rp></ruby>で<ruby>一番<rp>(</rp><rt>いちばん</rt><rp>)</rp></ruby>トイレの<ruby>作<rp>(</rp><rt>つく</rt><rp>)</rp></ruby>る<ruby>会社<rp>(</rp><rt>かいしゃ</rt><rp>)</rp></ruby>です。この<ruby>写真<rp>(</rp><rt>しゃしん</rt><rp>)</rp></ruby>はTOTOミュジアムにとりました。
 
 ![](https://www.japan-guide.com/g16/4883_05.jpg)
 ![Toilet Museum](https://www.washingtonpost.com/resizer/wGdtz-Kk9hc2tt6-DyXKGFqh_iw=/1024x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/ZHFOVSPVDE2HXMDUL4TI4GPFRQ.jpg)
 > TOTOに色んなトイレ
 
 # 色んなトイレ
-  一般的に日本の便所はふつのトイレのタイプがある。
+  <!-- 一般的に日本の便所はふつのトイレのタイプがある。 -->
+  <ruby>一般<rp>(</rp><rt>いっぱん</rt><rp>)</rp></ruby><ruby>的<rp>(</rp><rt>てき</rt><rp>)</rp></ruby>に<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby>の<ruby>便所<rp>(</rp><rt>べんじょ</rt><rp>)</rp></ruby>はふつのトイレのタイプがある
 
 ## 洋式 (ようしき)
-  様式はウェスタンスタイルのトイレです。
+  <ruby>様式<rp>(</rp><rt>ようしき</rt><rp>)</rp></ruby>はウェスタンスタイルのトイレです。
 
   ![yoshiki](https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Toilet_photo.jpg/400px-Toilet_photo.jpg)
 ## 和式 (わしき)
-  和式は伝統的なトイレです。様式に比べて和式にしゃがみなきゃ。日本の文化にはこのトイレはノーマル
+  <ruby>和式<rp>(</rp><rt>わしき</rt><rp>)</rp></ruby>は<ruby>伝統<rp>(</rp><rt>でんとう</rt><rp>)</rp></ruby><ruby>的<rp>(</rp><rt>てき</rt><rp>)</rp></ruby>なトイレです。<ruby>様式<rp>(</rp><rt>ようしき</rt><rp>)</rp></ruby>に<ruby>比<rp>(</rp><rt>くら</rt><rp>)</rp></ruby>べて<ruby>和式<rp>(</rp><rt>わしき</rt><rp>)</rp></ruby>にしゃがみなきゃ。<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby>の<ruby>文化<rp>(</rp><rt>ぶんか</rt><rp>)</rp></ruby>にはこのトイレはノーマ
 
   ![washiki](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/C75-MK7.jpg/340px-C75-MK7.jpg)
 
 # 日本のトイレはどうやって使うの。
 ![](https://toilet-guru.com/pictures/haneda-airport-0518-133239.jpg)
 
-たくさんボタンがあるのでちょっとこわそうだけど、使いやすいですね。
-そして、体温のボタンは気温を替える。
-
+たくさんボタンがあるのでちょっとこわそうだけど、<ruby>使<rp>(</rp><rt>つか</rt><rp>)</rp></ruby>いやすいですね。そして、<ruby>体温<rp>(</rp><rt>たいおん</rt><rp>)</rp></ruby>のボタンは<ruby>気温<rp>(</rp><rt>きおん</rt><rp>)</rp></ruby>を<ruby>替<rp>(</rp><rt>か</rt><rp>)</rp></ruby>える。
 
 # 私のけいけん
-  　先週は「フクスケ」というレストランにレハンさんとジミーさんと行きました。食べるのあとでトイレを使われます。
+  <ruby>先週<rp>(</rp><rt>せんしゅう</rt><rp>)</rp></ruby>は「フクスケ」というレストランにレハンさんとジミーさんと<ruby>行<rp>(</rp><rt>い</rt><rp>)</rp></ruby>きました。<ruby>食<rp>(</rp><rt>た</rt><rp>)</rp></ruby>べるのあとでトイレを<ruby>使<rp>(</rp><rt>つか</rt><rp>)</rp></ruby>われます。
 
 <iframe id="vp1moojt" title="Video Player" width="864" height="486" frameborder="0" src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1556601301&f=moojt4tVEBYJLMIB9MaE2w&d=0&m=p&r=360p&volume=100&start_res=undefined&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options=" allowfullscreen></iframe>
 
-僕はちり紙よりビデの方が楽しい。ビデを使うとリラックスできる。片付け安いも。
+<ruby>僕<rp>(</rp><rt>ぼく</rt><rp>)</rp></ruby>はちり<ruby>紙<rp>(</rp><rt>がみ</rt><rp>)</rp></ruby>よりビデの<ruby>方<rp>(</rp><rt>ほう</rt><rp>)</rp></ruby>が<ruby>楽<rp>(</rp><rt>たの</rt><rp>)</rp></ruby>しい。ビデを<ruby>使<rp>(</rp><rt>つか</rt><rp>)</rp></ruby>うとリラックスできる。<ruby>片付<rp>(</rp><rt>かたづ</rt><rp>)</rp></ruby>け<ruby>安<rp>(</rp><rt>やす</rt><rp>)</rp></ruby>いも
 
 # 外国のトイレ
-ウォシュレット自体が日本以外の国でほんとんど普及していません。西洋には芳樹だけ使う。
+ウォシュレット<ruby>自体<rp>(</rp><rt>じたい</rt><rp>)</rp></ruby>が<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby><ruby>以外<rp>(</rp><rt>いがい</rt><rp>)</rp></ruby>の<ruby>国<rp>(</rp><rt>くに</rt><rp>)</rp></ruby>でほんとんど<ruby>普及<rp>(</rp><rt>ふきゅう</rt><rp>)</rp></ruby>していません。<ruby>西洋<rp>(</rp><rt>せいよう</rt><rp>)</rp></ruby>には<ruby>芳樹<rp>(</rp><rt>よしき</rt><rp>)</rp></ruby>だけ<ruby>使<rp>(</rp><rt>つか</rt><rp>)</rp></ruby>う。
 
 ![American](https://sanitaryware.org/uploads/general/one-piece-types-toilet.jpg)
 > アメリカのトイレ
 
+<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby>のトイレに<ruby>比<rp>(</rp><rt>くら</rt><rp>)</rp></ruby>べてビデを<ruby>使<rp>(</rp><rt>つか</rt><rp>)</rp></ruby>わないので <ruby>水<rp>(</rp><rt>みず</rt><rp>)</rp></ruby>の<ruby>使<rp>(</rp><rt>つか</rt><rp>)</rp></ruby>う<ruby>方<rp>(</rp><rt>ほう</rt><rp>)</rp></ruby>の<ruby>中<rp>(</rp><rt>なか</rt><rp>)</rp></ruby>
+
+<ruby>下<rp>(</rp><rt>した</rt><rp>)</rp></ruby>の<ruby>写真<rp>(</rp><rt>しゃしん</rt><rp>)</rp></ruby>で
 ![Chinese](https://cn-seminar.com/wp-content/uploads/2018/02/2217957e0140152415b995c09912086a.jpg)
 > 中国のトイレ
 
-![]()
+<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby>のトイレに<ruby>比<rp>(</rp><rt>くら</rt><rp>)</rp></ruby>べ<ruby>沢山<rp>(</rp><rt>だくさん</rt><rp>)</rp></ruby>のトイレは<ruby>和式<rp>(</rp><rt>わしき</rt><rp>)</rp></ruby>です
 
 ありがとうございます！
