--- a/src/content/2019-03-15-日本のトイレ.md
+++ b/src/content/2019-03-15-日本のトイレ.md
@@ -13,6 +13,8 @@ templateKey: blog-post
 <!-- こんにちはみんなさんミゲルです！！私のウエブサイトへようこそ。トイレについて説明してみます。僕にとって、日本のトイレはすごく面白くて便利です！ このかっこいトイレはとても人気がある。機能についてたくさんがある。ビデとかドライヤーとか全部面白い -->
 こんにちはみんなさんミゲルです！！<ruby>私<rp>(</rp><rt>わたし</rt><rp>)</rp></ruby>のウエブサイトへようこそ。トイレについて<ruby>説明<rp>(</rp><rt>せつめい</rt><rp>)</rp></ruby>してみます。<ruby>僕<rp>(</rp><rt>ぼく</rt><rp>)</rp></ruby>にとって、<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby>のトイレはすごく<ruby>面白<rp>(</rp><rt>おもしろ</rt><rp>)</rp></ruby>くて<ruby>便利<rp>(</rp><rt>べんり</rt><rp>)</rp></ruby>です！ このかっこいトイレはとても<ruby>人気<rp>(</rp><rt>にんき</rt><rp>)</rp></ruby>がある。<ruby>機能<rp>(</rp><rt>きのう</rt><rp>)</rp></ruby>についてたくさんがある。ビデとかドライヤーとか<ruby>全部<rp>(</rp><rt>ぜんぶ</rt><rp>)</rp></ruby><ruby>面白<rp>(</rp><rt>おもしろ</rt><rp>)</rp></ruby>い
 
+![example](https://brightoneagle.files.wordpress.com/2014/09/img_2953.jpg?w=768&h=576)
+
 ## なぜ私はトイレを選んだのか。
   <ruby>私<rp>(</rp><rt>わたし</rt><rp>)</rp></ruby>はいつもトイレを<ruby>好<rp>(</rp><rt>す</rt><rp>)</rp></ruby>きです
 
@@ -30,11 +32,6 @@ templateKey: blog-post
 ></iframe>
 <ruby>素晴<rp>(</rp><rt>すば</rt><rp>)</rp></ruby>らしい
 
-# <ruby>歴史<rp>(</rp><rt>れきし</rt><rp>)</rp></ruby>
-  <!-- 昔のトイレは木で出来ている。 明治維新のあと様式の作るはじめまりました。 -->
-<!-- TOTO株式会社（かぶしきがいしゃ）は世界で一番トイレの作る会社です。この写真はTOTOミュジアムにとりました。 -->
-<ruby>昔<rp>(</rp><rt>むかし</rt><rp>)</rp></ruby>のトイレは<ruby>木<rp>(</rp><rt>き</rt><rp>)</rp></ruby>で<ruby>出来<rp>(</rp><rt>でき</rt><rp>)</rp></ruby>ている。 <ruby>明治維新<rp>(</rp><rt>めいじいしん</rt><rp>)</rp></ruby>のあと<ruby>様式<rp>(</rp><rt>ようしき</rt><rp>)</rp></ruby>の<ruby>作<rp>(</rp><rt>つく</rt><rp>)</rp></ruby>るはじめまりました。
-TOTO<ruby>株式会社<rp>(</rp><rt>かぶしきがいしゃ</rt><rp>)</rp></ruby>（かぶしきがいしゃ）は<ruby>世界<rp>(</rp><rt>せかい</rt><rp>)</rp></ruby>で<ruby>一番<rp>(</rp><rt>いちばん</rt><rp>)</rp></ruby>トイレの<ruby>作<rp>(</rp><rt>つく</rt><rp>)</rp></ruby>る<ruby>会社<rp>(</rp><rt>かいしゃ</rt><rp>)</rp></ruby>です。この<ruby>写真<rp>(</rp><rt>しゃしん</rt><rp>)</rp></ruby>はTOTOミュジアムにとりました。
 
 ![](https://www.japan-guide.com/g16/4883_05.jpg)
 ![Toilet Museum](https://www.washingtonpost.com/resizer/wGdtz-Kk9hc2tt6-DyXKGFqh_iw=/1024x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/ZHFOVSPVDE2HXMDUL4TI4GPFRQ.jpg)
@@ -50,6 +47,17 @@ TOTO<ruby>株式会社<rp>(</rp><rt>かぶしきがいしゃ</rt><rp>)</rp></rub
   ![yoshiki](https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Toilet_photo.jpg/400px-Toilet_photo.jpg)
 ## 和式 (わしき)
   <ruby>和式<rp>(</rp><rt>わしき</rt><rp>)</rp></ruby>は<ruby>伝統<rp>(</rp><rt>でんとう</rt><rp>)</rp></ruby><ruby>的<rp>(</rp><rt>てき</rt><rp>)</rp></ruby>なトイレです。<ruby>様式<rp>(</rp><rt>ようしき</rt><rp>)</rp></ruby>に<ruby>比<rp>(</rp><rt>くら</rt><rp>)</rp></ruby>べて<ruby>和式<rp>(</rp><rt>わしき</rt><rp>)</rp></ruby>にしゃがみなきゃ。<ruby>日本<rp>(</rp><rt>にっぽん</rt><rp>)</rp></ruby>の<ruby>文化<rp>(</rp><rt>ぶんか</rt><rp>)</rp></ruby>にはこのトイレはノーマ
+
+# <ruby>歴史<rp>(</rp><rt>れきし</rt><rp>)</rp></ruby>
+  <!-- 昔のトイレは木で出来ている。 明治維新のあと様式の作るはじめまりました。 -->
+<!-- TOTO株式会社（かぶしきがいしゃ）は世界で一番トイレの作る会社です。この写真はTOTOミュジアムにとりました。 -->
+トイレの歴史は人類の歴史である
+<ruby>昔<rp>(</rp><rt>むかし</rt><rp>)</rp></ruby>のトイレは<ruby>木<rp>(</rp><rt>き</rt><rp>)</rp></ruby>で<ruby>出来<rp>(</rp><rt>でき</rt><rp>)</rp></ruby>ている。 <ruby>明治維新<rp>(</rp><rt>めいじいしん</rt><rp>)</rp></ruby>のあと<ruby>様式<rp>(</rp><rt>ようしき</rt><rp>)</rp></ruby>の<ruby>作<rp>(</rp><rt>つく</rt><rp>)</rp></ruby>るはじめまりました。
+TOTO<ruby>株式会社<rp>(</rp><rt>かぶしきがいしゃ</rt><rp>)</rp></ruby>（かぶしきがいしゃ）は<ruby>世界<rp>(</rp><rt>せかい</rt><rp>)</rp></ruby>で<ruby>一番<rp>(</rp><rt>いちばん</rt><rp>)</rp></ruby>トイレの<ruby>作<rp>(</rp><rt>つく</rt><rp>)</rp></ruby>る<ruby>会社<rp>(</rp><rt>かいしゃ</rt><rp>)</rp></ruby>です。この<ruby>写真<rp>(</rp><rt>しゃしん</rt><rp>)</rp></ruby>はTOTOミュジアムにとりました。
+
+２０世紀トイレが始まって
+1980まで最初の様式スイスの技術を使います
+
 
   ![washiki](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/C75-MK7.jpg/340px-C75-MK7.jpg)
 
